--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,47 +1,34 @@
-name: Docker Image CI
+name: Build Docker image
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
-
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }} # -> teshi9459/valorant-randomizer
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  build-and-push-image:
+  build-and-package:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: write   # <-- wichtig für GHCR
-      id-token: write
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
-      - name: Log in to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels)
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          context: .
-          file: ./Dockerfile
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      - name: Build image
+        run: |
+          docker build -t valorant-randomizer:latest .
 
+      - name: Save image as tarball
+        run: |
+          docker save valorant-randomizer:latest -o valorant-randomizer-image.tar
+
+      - name: Upload image artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: valorant-randomizer-image
+          path: valorant-randomizer-image.tar
+          if-no-files-found: error
+          retention-days: 5
